fix: url wrapping and update url regex to accept `%` in the urls (#1198)
* fix: url wrapping and update url regex to accept `%` in the urls

see trello card for details

fixes issue 7582

* Update src/app/constants.ts

--- a/src/app/record/components/display-attribute/display-attribute.component.scss
+++ b/src/app/record/components/display-attribute/display-attribute.component.scss
@@ -9,4 +9,5 @@
 :host {
   display: block;
   margin-bottom: 15px;
+  word-break: break-word;
 }
